Почистил ненужное, обновил модель

--- a/lesson_2/AuthorizationServer/Views/Home/Index.cshtml
+++ b/lesson_2/AuthorizationServer/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1>Authorization Server</h1>
-   <h2>You are in Home Page</h2>
+    <h1>Popug oAuth Server</h1>
+    <a href="https://localhost:44370/oauth/authorize?client_id=BF2C6EC3-338A-4EE3-9D97-F98A2A559186&scope=user%20phone&response_type=code&redirect_uri=https%3A%2F%2Flocalhost%3A44336%2Foauth%2Fcallback&code_challenge=Pz1aQzMaQj4KEbMTKVZZEpv3j6YJ5cL92nqE2RddU-0&code_challenge_method=S256&state=CfDJ8JM3PxjMXlxBkQqvAKdxJ3h_PxrV1ozJEMJjXg9XQx6x31RQE3qn-GFcemmVlfTVmR7NT7nMcTWjpbZZx-yObKMyQ0xF2gsVgl0Vn0AIO043aLJnwnQLCkdygiEH1wsVYb3ukRypGdW1dJPK_G0LeqGu1S9SvPwT9R6yfWKskF9n_1tnTwkoAZdQyeSnYqeZwVpGe6xa1Gyhrr9xLnXWl68KV4UDB-hBsHBJPtJCBuKiFNNGNoEcJaLzLronaTV6U1Zf6Mo71Y29A5faH6o7wTHFawqhFbrF-7GiEI-s_ICE">Test client request</a>
 </div>
